--- a/Proyecto/css/estilosVT.css
+++ b/Proyecto/css/estilosVT.css
@@ -76,7 +76,10 @@ ul > li:first-child
 {
 font-weight: bold;
 }
-
+ul > li:nth-child(5)
+{
+font-weight:bold;
+}
 .imgF {
     width: 200px;
     height: 250px;
