--- a/Proyecto/css/estilosBV.css
+++ b/Proyecto/css/estilosBV.css
@@ -92,41 +92,50 @@ div {
     width: 200px;
     height: 95%;
     margin-top: 5px;
-}.buttonNav {
+}
+.buttonNav {
+
     width: 100px;
     height: 30px;
-    background-color: #71cbfc;
-    color: black;
-    font-size: 14px;
-    font-weight: bold;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    border: none;
-    border-radius: 3px;
+    background: #b1e1fa;
+    color: rgb(0, 0, 0);
+    font-size: 17px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin: 10px 4px;
+    border: 1px solid #71cbfc;
+    box-shadow: 0px 1px 1px rgb(0, 0, 0);
+    transition: 0.4s;
 }
 .buttonNav6 {
-    width: 150px;
+
+    width: 100px;
     height: 30px;
-    background: #71cbfc;
-    color: black;
-    font-size: 14px;
-    font-weight: bold;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    border: none;
+    background: #b1e1fa;
+    color: rgb(0, 0, 0);
+    font-size: 17px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin: 10px 4px;
+    border: 1px solid #71cbfc;
+    box-shadow: 0px 1px 1px rgb(0, 0, 0);
+    transition: 0.4s;
+}
+.buttonNav:hover
+{
+    cursor: pointer;
+    background: rgb(12, 13, 56);
+    color: rgb(238, 176, 42);
+    border: 1px solid black;
     border-radius: 3px;
+    transition: 0.4s;
 }
-.buttonNav:hover{
-    background-color: turquoise;
+.buttonNav6:hover
+{
     cursor: pointer;
-    color: black;
-    font-weight: bold;
-}
-.buttonNav6:hover{
-    background-color: turquoise;
-    font-weight: bold;
-    color: black;
-    cursor: pointer;
+    background: rgb(12, 13, 56);
+    color: rgb(238, 176, 42);
+    border: 1px solid black;
+    border-radius: 3px;
+    transition: 0.4s;
 }
 #P1 {
     font-size: x-large;
