--- a/Proyecto/css/estilosLAloj.css
+++ b/Proyecto/css/estilosLAloj.css
@@ -96,13 +96,16 @@ div {
     margin-top: 5px;
 }
 .buttonNav {
-    width: auto;
-    height: 25px;
-    background: #0b173d;
-    color: #d1a103;
-    font-size: 15px;
-    font-weight: bold;
-    border-radius: 10px;
+    width: 100px;
+    height: 30px;
+    background: #b1e1fa;
+    color: rgb(0, 0, 0);
+    font-size: 17px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin: 10px 4px;
+    border: 1px solid #71cbfc;
+    box-shadow: 0px 1px 1px rgb(0, 0, 0);
+    transition: 0.4s;
 }
 #Contenido{
     display: flex;
