--- a/Proyecto/css/estilosLAloj.css
+++ b/Proyecto/css/estilosLAloj.css
@@ -107,6 +107,17 @@ div {
     box-shadow: 0px 1px 1px rgb(0, 0, 0);
     transition: 0.4s;
 }
+
+.buttonNav:hover
+{
+    cursor: pointer;
+    background: rgb(12, 13, 56);
+    color: rgb(238, 176, 42);
+    border: 1px solid black;
+    border-radius: 3px;
+    transition: 0.4s;
+}
+
 #Contenido{
     display: flex;
     align-items: center;
