--- a/Proyecto/css/estilosLA.css
+++ b/Proyecto/css/estilosLA.css
@@ -99,13 +99,17 @@ div {
     
 }
 .buttonNav {
-    width: auto;
-    height: 25px;
-    background: #0b173d;
-    color: #d1a103;
-    font-size: 15px;
-    font-weight: bold;
-    border-radius: 10px;
+
+    min-width: 12%;
+    height: 30px;
+    background: #b1e1fa;
+    color: rgb(0, 0, 0);
+    font-size: 17px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin: 10px 4px;
+    border: 1px solid #71cbfc;
+    box-shadow: 0px 1px 1px rgb(0, 0, 0);
+    transition: 0.4s;
 }
 form
 {
@@ -190,20 +194,22 @@ select
 }
 .orden img
 {
-    min-height: 20vh;
-    max-width: 20vw;
+    /*min-height: 20vh;
+    max-width: 20vw;*/
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .destinosTOP
 {
+    min-height: 30vh;
+    width: 20rem;
     border: 1px solid var(--grisOscuro);
     border-radius: 10px;
     margin: 20px;
     padding: 10px;
     background-color: white;
-    min-height: 30vh;
+    display: table;
     transition: 0.5s;
 }
 .destinosTOP > p
@@ -213,7 +219,7 @@ select
 .destinosTOP a > img
 {
     height: 30vh;
-    min-width: 20vw;
+    width: 20rem;
     padding: 10px;
     overflow:hidden;
     transition: 0.5s;
@@ -233,6 +239,15 @@ select
     padding: 15px;
     background-color: white;
     transition: 1s;
+}
+.buttonNav:hover
+{
+    cursor: pointer;
+    background: rgb(12, 13, 56);
+    color: rgb(238, 176, 42);
+    border: 1px solid black;
+    border-radius: 3px;
+    transition: 0.4s;
 }
 button:hover
 {
@@ -265,7 +280,98 @@ fieldset:hover
     -webkit-box-shadow: 0px 0px 15px 15px var(--quintoColor);
     transform: rotate(360deg);
     -webkit-transform: rotate(360deg);
-    background-color: rgb(22, 19, 63);
+    background-color: rgb(12, 13, 56);
     color: rgb(235, 166, 18);
     transition: 1s;
+}
+@media screen and (max-width: 1500px) {
+    .orden{
+        display: grid;
+    }
+}
+@media screen and (max-width: 900px)
+{
+    body{
+        padding: 5px;
+    }
+    main
+    {
+        width: 95%;
+
+    }
+    .orden
+    {
+        display: grid;
+    }
+    .contenido
+    {
+        width: 90%;
+    }
+
+}
+@media screen and (max-width: 600px)
+{
+    body{
+        background: -webkit-linear-gradient(rgb(0, 0, 0), rgb(13,13, 13));
+        padding: 0px;
+    }
+    main
+    {
+        width: 100%;
+    }
+    .contenido
+    {
+        width: 90%;
+    }
+    .formulario
+    {
+        display: grid;
+    }
+    .estiloform
+    {
+        margin: 0;
+    }
+    .estiloform div
+    {
+        padding: 5px;
+    }
+    
+}
+
+@media screen and (max-width: 500px)
+{
+    body{
+        background: -webkit-linear-gradient(rgb(0, 0, 0), rgb(13,13, 13));
+        padding: 0px;
+    }
+    main
+    {
+        width: 100%;
+    }
+    .contenido
+    {
+        width: 95%;
+    }
+
+    .destinosTOP
+    {
+        width: 18rem;
+    }
+    .destinosTOP a > img
+    {
+        width: 18rem;
+    }
+
+    .formulario
+    {
+        display: grid;
+    }
+    .estiloform
+    {
+        margin: 0;
+    }
+    .estiloform div
+    {
+        padding: 5px;
+    }
 }
