--- a/Proyecto/css/estilosVT.css
+++ b/Proyecto/css/estilosVT.css
@@ -54,7 +54,7 @@ div {
 }
 .subContenido {
     width: 95%;
-    height: auto;
+    height: 250px;
     background-color: #71cbfc;
     margin: 0 auto;
     margin-top: 10px;
